--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,13 +1,26 @@
-numpy
-scipy
-pandas
-seaborn
-matplotlib
-ipython-notebook
-
-iris
+basemap
 cartopy
-
-gsw
 ctd
+descartes
+fiona
+gdal
+geojson
+geojsonio
+geopandas
+gsw
+ipython-notebook
+iris
+matplotlib
+numpy
 oceans
+pandas
+pyproj
+pyproj
+rasterio
+requests
+scikit-learn
+scipy
+seaborn
+shapely
+statsmodels
+sympy
